// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateTncPage should enable the Generate Page button 1`] = `<withRouter(GenerateTncPage) />`;

exports[`GenerateTncPage should input value get filled 1`] = `
<input
  class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
  data-testid="ds-text-input"
  name="support_email"
  placeholder="Enter text here"
  type="text"
  value="abc@gmail.com"
/>
`;

exports[`GenerateTncPage should input value get filled 2`] = `
<input
  class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
  data-testid="ds-text-input"
  placeholder="Select"
  type="text"
  value="1-2 days"
/>
`;

exports[`GenerateTncPage should input value get filled 3`] = `
<input
  class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
  data-testid="ds-text-input"
  placeholder="Select"
  type="text"
  value="3-5 days"
/>
`;

exports[`GenerateTncPage should input value get filled 4`] = `
<input
  class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
  data-testid="ds-text-input"
  placeholder="Select"
  type="text"
  value="9-15 days"
/>
`;

exports[`GenerateTncPage should input value get filled 5`] = `
<input
  class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
  data-testid="ds-text-input"
  placeholder="Select"
  type="text"
  value="NA"
/>
`;
